syntax = "proto3";

package nighthawk.adaptive_rps;

import "google/protobuf/any.proto";

// Selects and configures a StepController plugin.
message StepControllerConfig {
  // Name used to locate the plugin in the Envoy registry.
  string name = 1;
  // Plugin-specific config.
  google.protobuf.Any typed_config = 2;
}
