syntax = "proto3";

package nighthawk.client;

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "validate/validate.proto";

// This proto represents that output format that Fortio expects when converted to JSON.
// Nighthawk can fill in this proto, and then unmarshal to the Fortio-compatible JSON.
// Therefore, this proto may not follow conventions. aip.dev/not-precedent
message FortioResult {
  // Disable validate because it doesn't work well with fields that are not all lowercase.
  // The field cases must match the final output JSON that fortio-ui expects.
  option (validate.disabled) = true;

  // From https://github.com/fortio/fortio/wiki/FAQ:
  // If using the command line, don't forget to use -a to auto save the json results in the current
  // data directory. And to use labels -labels "x y z" so the file name and the json include some
  // description of your run. You can later run fortio report to browse
  // graphically your results.
  // The Nighthawk equivalent of this field is structured as a repeated string, which will be
  // concatenated into this field, using ' ' as a separator.
  string Labels = 1;

  google.protobuf.Timestamp StartTime = 2;

  uint32 RequestedQPS = 3;

  google.protobuf.Duration RequestedDuration = 4;

  double ActualQPS = 5;

  double ActualDuration = 6;

  uint32 NumThreads = 7;

  DurationHistogram DurationHistogram = 8;

  map<string, uint64> RetCodes = 11;

  string URL = 12;

  string Version = 13;

  bool Jitter = 14;

  string RunType = 15;

  // Exactly can be used to stop fortio after a fixed amount of replies.
  // We don't seem to need this, and going forward it might be hard/annoying to
  // translate this field as Nighthawk's concepts diverge a bit. If end up
  // needing to we can probably inspect the main phase and then figure out if there's a
  // termination predicate configured for a fixed number of responses observed
  // via stats. For now, however, skip this field.
  // uint64 Exactly = 16;
}

message DurationHistogram {
  option (validate.disabled) = true;

  uint64 Count = 1;

  repeated DataEntry Data = 2;

  double Min = 3;

  double Max = 4;

  double Sum = 5;

  double Avg = 6;

  double StdDev = 7;

  repeated FortioPercentile Percentiles = 8;
}

message DataEntry {
  option (validate.disabled) = true;

  double Start = 1;

  double End = 2;

  double Percent = 3;

  uint64 Count = 4;
}

message FortioPercentile {
  option (validate.disabled) = true;

  double Percentile = 1;

  double Value = 2;
}
